--- a/rakefile
+++ b/rakefile
@@ -1,10 +1,4 @@
 desc "This task is called by the Heroku scheduler add-on"
-task :update_feed => :environment do
+task :update_feed do
   puts "Updating feed..."
-  NewsFeed.update
-  puts "done."
-end
-
-task :send_reminders => :environment do
-  User.send_reminders
 end
