--- a/rakefile
+++ b/rakefile
@@ -1,13 +1,47 @@
 require 'redis'
-require 'curl'
 require 'json'
-require 'cgi'
 
-db = Redis.new
-curl = CURL.new
+require_relative 'src/commands/status.rb'
+require_relative 'src/database.rb'
+require_relative 'src/reminder.rb'
 
-desc "This task is called by the Heroku scheduler add-on"
-task :reminder do
+desc 'This task is initializes database'
+task :init_database do
   db = Redis.new
-  puts db.ping
+
+  unless db.exists('users')
+    db.set('users', {}.to_json)
+  end
+
+  p 'database created'
+end
+
+desc 'This task is drop database'
+task :init_database do
+  db = Redis.new
+  db.set('users', {}.to_json)
+
+  p 'database cleared'
+end
+
+desc 'This task is make remind'
+task :remind do
+  db = Database.new
+  users = db.get_users
+  token = db.get_token
+  user_keys = users.keys
+
+  user_keys.each do |user_key|
+    user = users[user_key]
+    remind_message = Status.new(user).say
+    reminders = user['reminders']
+
+    if reminders.any? do |reminder|
+      Reminder.need_remind_now?(reminder['days'], reminder['hour'])
+    end
+      Reminder.remind(token, user_key, remind_message)
+    end
+
+  end
+
 end
